--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,14 @@ ul {
 	list-style: none;
 }
 
+main {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 #toolbar {
 	padding: 0 1rem;
 	height: 3.5rem;
